<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B38524"
    tools:context=".App.Seguridad.Seguridad_RegistrarUsuarioActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollview1"

            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"


            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/transparente"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.807"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="46dp">


            <TextView
                android:id="@+id/lbl_titulo_crear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/US_lbl_titulo"
                android:textColor="#5E394C"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lbl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/US_lbl_correo"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_correoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:ems="10"
                android:hint="@string/US_txt_email"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lbl_clave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/US_lbl_password"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_contrasenaUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/US_txt_clave"
                android:inputType="textPersonName|textEmailAddress|textWebPassword" />

            <TextView
                android:id="@+id/lbl_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/US_lbl_nombre"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_nombreUsuario"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/US_txt_nombre"
                android:inputType="textPersonName"
                android:textColor="#070113" />

            <TextView
                android:id="@+id/lbl_apellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/US_lbl_apellidoPaterno"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_apellidoPaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/US_txt_apellidoPaterno"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lbl_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/US_lbl_apellidoMaterno"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_apellidoMaterno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/US_txt_apellidoMaterno"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/lbl_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/US_lbl_celular"
                android:textColor="#4d4549"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_telefonoUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/US_txt_celular"
                android:inputType="number" />


            <Button
                android:id="@+id/btn_user_registrar"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:background="#5E394C"
                android:onClick="Reg_usuario"
                android:text="@string/boton_registrarse"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>