<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B38524"
    tools:context=".App.Citas.Citas_Admin_ActualizarCitasActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/scrollview1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/transparente"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.807"
            tools:layout_editor_absoluteX="21dp"
            tools:layout_editor_absoluteY="46dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/act_codpedido"
                    android:layout_width="85dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:text="@string/Act_idCita"
                    android:textColor="#5E394C"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/act_cod_pedido"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Act_lbl_idCita"
                    android:inputType="textPersonName"
                    android:textColor="#B38524"
                    android:textSize="18dp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/act_fechped"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/Act_FechaCita"
                    android:textColor="#5E394C"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/act_fechaCita"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/Act_lbl_fec_cita"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/act_horaCita"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/Act_lbl_horaCita"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/act_Producto"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:hint="@string/Act_lbl_titulo"
                    android:inputType="textMultiLine|textPersonName"
                    android:textColor="#5E394C"
                    android:textSize="20dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgfotoServicio"
                    android:layout_width="150dp"
                    android:layout_height="194dp"
                    android:layout_gravity="top"
                    android:contentDescription="@string/app_name"
                    android:tag="PRO-"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/txt_cod_pedido"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/preview" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="281dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/act_codpro"
                            android:layout_width="70dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="10dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            android:text="@string/Act_idServicio"
                            android:textColor="#5E394C"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/act_idServicio"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/Act_lbl_idServicio"
                            android:inputType="textPersonName"
                            android:textColor="#5E394C"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/act_Usua"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:inputType="textPersonName"
                        android:text="@string/Act_codUsuario"
                        android:textColor="#5E394C"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/act_correoUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Act_lbl_cod_usu"
                        android:inputType="textMultiLine|textPersonName" />

                    <TextView
                        android:id="@+id/act_Nomb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:inputType="textPersonName"
                        android:text="@string/Act_Nombre"
                        android:textColor="#5E394C"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/act_nombreUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Act_lbl_nom"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/act_Servicio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:inputType="textPersonName"
                        android:text="@string/Act_nombreServicio"
                        android:textColor="#5E394C"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/act_nombreServicio"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:hint="@string/Act_lbl_nombreServicio"
                        android:inputType="textMultiLine|textPersonName" />

                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>

                <LinearLayout
                    android:layout_width="250dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/act_est"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="textPersonName"
                    android:text="@string/Act_estado"
                    android:textColor="#5E394C"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/act_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/Act_lbl_estado"
                    android:inputType="textPersonName"
                    android:textColor="#15975b"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/lbl_Estado"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/Act_lbl_titulo_estado"
                    android:textColor="#5E394C"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner_estado"
                    android:layout_width="200dp"
                    android:layout_marginTop="20dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <ImageButton
                android:id="@+id/imgLlamada"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                app:srcCompat="@drawable/ic_icono_llamada"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/btn_ActualizarPedido"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:background="#5E394C"
                android:onClick="ActualizarPedido"
                android:text="@string/Act_btn_actualizar"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_AnularPedido"
                android:layout_width="340dp"
                android:layout_height="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="60dp"
                android:background="#5E394C"
                android:onClick="AnularPedido"
                android:text="@string/Act_btn_anular"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>